[gd_scene load_steps=9 format=3 uid="uid://ddx1pc1p6slm"]

[ext_resource type="Theme" uid="uid://d2err8tt7ewhf" path="res://scenes/ui/game_ui_theme.tres" id="1_2yiqu"]
[ext_resource type="Script" uid="uid://bx78ho8e36gta" path="res://scenes/ui/tools_panel.gd" id="2_a7ivs"]
[ext_resource type="Texture2D" uid="uid://ppdl7p6yafuu" path="res://assets/game/objects/Basic_tools_and_meterials.png" id="2_xkgdf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a7ivs"]
atlas = ExtResource("2_xkgdf")
region = Rect2(18, 0, 13, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xkgdf"]
load_path = "res://.godot/imported/Basic_tools_and_meterials.png-81bb406a926ef25b2e2c2ddee48acff1.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_0jxvs"]
atlas = SubResource("CompressedTexture2D_xkgdf")
region = Rect2(34, 0, 13, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a7ivs"]
load_path = "res://.godot/imported/Basic_tools_and_meterials.png-81bb406a926ef25b2e2c2ddee48acff1.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_gbtgy"]
atlas = SubResource("CompressedTexture2D_a7ivs")
region = Rect2(0, 0, 16, 16)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 100.0
offset_bottom = 40.0
theme = ExtResource("1_2yiqu")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_a7ivs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_a7ivs")
icon_alignment = 1

[node name="ToolHoe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_0jxvs")
icon_alignment = 1

[node name="ToolCan" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_gbtgy")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolHoe" to="." method="_on_tool_hoe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolCan" to="." method="_on_tool_can_pressed"]
